# vk-shader-stash

./: .gitignore  CMakeLists.txt  README.md
include/: shader-stash.hpp
